# cpu-gpu-dvfs

./: .gitignore  CHANGELOG_detect_hardware.md  HARDWARE_DETECTOR_SUMMARY.md  README.md  proyecto_10_copilot_context.md  proyecto_10_general_context.md  requirements.txt
benchmark_monitor_C/: README.md
benchmarks/cpu/: dot.c  memcpy.c
benchmarks/gpu/: gemm.cu  stencil.cu
configs/: experiment_config.yaml  guane15_notes.md  sweep_config_example.json  test_sweep_guane15.json
data/: .gitkeep
docs/: AMD_PROFILING_GUIDE.md  DEPLOYMENT_GUIDE.md  ENERGY_MEASUREMENT_STRATEGIES.md  HARDWARE_DETECTOR_SPEC.md  ML_FEATURE_SET.md  VERSION_MANAGEMENT.md  cluster_capabilities.md  experiment_log.md  hardware_specs.md
gpu_benchmark/: CMakeLists.txt  README.md  gemm_benchmark.cu  gemm_benchmark_google.cu  gpu_monitor_nvml.cpp  results_gpu.csv  run_gpu_benchmark.sh
hardware-info/: GIRG_hardware_report.json  Viz_hardware_report.json  deepL_hardware_report.json  guane_normal_hardware_report.json
models/: .gitkeep
notebooks/: analysis.ipynb
scripts/: README_SWEEP.md  deploy_to_cluster.sh  detect_hardware.py  detect_hardware.sh  detect_hardware_v2.py  run_sweep.py
tests/: test_detect_hardware.py  test_runtime.py
